--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a href="PortofolioPage.html" target="_blank">
                                     
-                                    <img src="img/portfolio/casualchic.png" class="img-responsive" alt="" style="width:550px;
+                                    <img src="img/portfolio/casualchic.PNG" class="img-responsive" alt="" style="width:550px;
 height:550px;">
                                 </a>
                                 <div class="portfolio-caption">
@@ -156,7 +156,7 @@ height:550px;">
                             </div>
                             <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a href="PortofolioPage.html" target="_blank">
-                                    <img src="img/portfolio/Classic.png" class="img-responsive" alt="" style="width:550px;
+                                    <img src="img/portfolio/Classic.PNG" class="img-responsive" alt="" style="width:550px;
 height:550px;">
                                 </a>
                                 <div class="portfolio-caption">
@@ -165,7 +165,7 @@ height:550px;">
                             </div>
                             <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a href="PortofolioPage.html" target="_blank">
-                                    <img src="img/portfolio/business.png" class="img-responsive" alt="" style="width:550px;
+                                    <img src="img/portfolio/business.PNG" class="img-responsive" alt="" style="width:550px;
 height:550px;">
                                 </a>
                                 <div class="portfolio-caption">
@@ -174,7 +174,7 @@ height:550px;">
                             </div>
                             <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a href="PortofolioPage.html" target="_blank">
-                                    <img src="img/portfolio/Contemporain.png" class="img-responsive" alt="" style="width:550px;
+                                    <img src="img/portfolio/Contemporain.PNG" class="img-responsive" alt="" style="width:550px;
 height:550px;">
                                 </a>
                                 <div class="portfolio-caption">
@@ -183,7 +183,7 @@ height:550px;">
                             </div>
                             <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a href="PortofolioPage.html" target="_blank">
-                                    <img src="img/portfolio/Rock.png" class="img-responsive" alt="" style="width:550px;
+                                    <img src="img/portfolio/Rock.PNG" class="img-responsive" alt="" style="width:550px;
 height:550px;">
                                 </a>
                                 <div class="portfolio-caption">
@@ -192,7 +192,7 @@ height:550px;">
                             </div>
                             <div class="col-md-4 col-sm-6 portfolio-item">
                                 <a href="PortofolioPage.html" target="_blank">
-                                    <img src="img/portfolio/dandy.png" class="img-responsive" alt="" style="width:550px;
+                                    <img src="img/portfolio/dandy.PNG" class="img-responsive" alt="" style="width:550px;
 height:550px;">
                                 </a>
                                 <div class="portfolio-caption">
