--- a/PortofolioPage.html
+++ b/PortofolioPage.html
@@ -177,16 +177,16 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="img/pageportofolio/dandy6.png" alt="First slide" width="100%">
+          <img class="first-slide" src="img/pageportofolio/dandy6.PNG" alt="First slide" width="100%">
         </div>
         <div class="item">
-          <img class="second-slide" src="img/pageportofolio/dandy11.png" alt="Second slide" width="100%">
+          <img class="second-slide" src="img/pageportofolio/dandy11.PNG" alt="Second slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/dandy10.png" alt="Third slide" width="100%">
+          <img class="third-slide" src="img/pageportofolio/dandy10.PNG" alt="Third slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/contemporain6.png" alt="Third slide" width="100%" height="50%">
+          <img class="third-slide" src="img/pageportofolio/contemporain6.PNG" alt="Third slide" width="100%" height="50%">
         </div>
       </div>
     </div>
@@ -243,16 +243,16 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="img/pageportofolio/classic4.png" alt="First slide" width="100%">
+          <img class="first-slide" src="img/pageportofolio/classic4.PNG" alt="First slide" width="100%">
         </div>
         <div class="item">
-          <img class="second-slide" src="img/pageportofolio/classic2.png" alt="Second slide" width="100%">
+          <img class="second-slide" src="img/pageportofolio/classic2.PNG" alt="Second slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/classic6.png" alt="Third slide" width="100%">
+          <img class="third-slide" src="img/pageportofolio/classic6.PNG" alt="Third slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/classic7.png" alt="Third slide" width="100%" height="50%">
+          <img class="third-slide" src="img/pageportofolio/classic7.PNG" alt="Third slide" width="100%" height="50%">
         </div>
       </div>
       
@@ -310,16 +310,16 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="img/pageportofolio/contemporain 2.png" alt="First slide" width="100%">
+          <img class="first-slide" src="img/pageportofolio/contemporain 2.PNG" alt="First slide" width="100%">
         </div>
         <div class="item">
-          <img class="second-slide" src="img/pageportofolio/dandy3.png" alt="Second slide" width="100%">
+          <img class="second-slide" src="img/pageportofolio/dandy3.PNG" alt="Second slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/dandy9.png" alt="Third slide" width="100%">
+          <img class="third-slide" src="img/pageportofolio/dandy9.PNG" alt="Third slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/dandy7.png" alt="Third slide" width="100%" height="50%">
+          <img class="third-slide" src="img/pageportofolio/dandy7.PNG" alt="Third slide" width="100%" height="50%">
         </div>
       </div>
     </div>
@@ -379,16 +379,16 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="img/pageportofolio/business2.png" alt="First slide" width="100%">
+          <img class="first-slide" src="img/pageportofolio/business2.PNG" alt="First slide" width="100%">
         </div>
         <div class="item">
-          <img class="second-slide" src="img/pageportofolio/business4.png" alt="Second slide" width="100%">
+          <img class="second-slide" src="img/pageportofolio/business4.PNG" alt="Second slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/business5.png" alt="Third slide" width="100%">
+          <img class="third-slide" src="img/pageportofolio/business5.PNG" alt="Third slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/business6.png" alt="Third slide" width="100%" height="50%">
+          <img class="third-slide" src="img/pageportofolio/business6.PNG" alt="Third slide" width="100%" height="50%">
         </div>
       </div>
     </div>
@@ -448,16 +448,16 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="img/pageportofolio/rock.png" alt="First slide" width="100%">
+          <img class="first-slide" src="img/pageportofolio/rock.PNG" alt="First slide" width="100%">
         </div>
         <div class="item">
-          <img class="second-slide" src="img/pageportofolio/rock3.png" alt="Second slide" width="100%">
+          <img class="second-slide" src="img/pageportofolio/rock3.PNG" alt="Second slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/rock4.png" alt="Third slide" width="100%">
+          <img class="third-slide" src="img/pageportofolio/rock4.PNG" alt="Third slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/rock5.png" alt="Third slide" width="100%" height="50%">
+          <img class="third-slide" src="img/pageportofolio/rock5.PNG" alt="Third slide" width="100%" height="50%">
         </div>
       </div>
     </div>
