--- a/PortofolioPage.html
+++ b/PortofolioPage.html
@@ -123,7 +123,7 @@
 <br>
 <br>
 <br>
-<p style="text-align:center; font-size: 30px; font-family:Kaushan Script, Helvetica Neue,Helvetica,Arial,cursive; color:#400808">LET US DO YOUR SHOPPING!</p>
+<p style="text-align:center; font-size: 30px; font-family:Kaushan Script, Helvetica Neue,Helvetica,Arial,cursive; color:#400808; margin-top:-73px">LET US DO YOUR SHOPPING!</p>
 
 <br>
  <div class="assur-list" style="background-color:white;">
@@ -252,7 +252,7 @@
           <img class="third-slide" src="img/pageportofolio/Classic6.PNG" alt="Third slide" width="100%">
         </div>
         <div class="item">
-          <img class="third-slide" src="img/pageportofolio/classic7.PNG" alt="Third slide" width="100%" height="50%">
+          <img class="third-slide" src="img/pageportofolio/<!--  -->lassic7.PNG" alt="Third slide" width="100%" height="50%">
         </div>
       </div>
       
